hphp/hack/test/typecheck/inout/bad_inout_use_byref.php.exp
File "bad_inout_use_byref.php", line 7, characters 11-13:
Unexpected reference (Parsing[1002])
